# iot-edge-collector

./: Cargo.toml  license.txt  readme.md
src/: main.rs
test/: endpoint-cfg.json
