[package]
name = "iot-edge-collector"
version = "0.1.0"
authors = ["Jake Swensen <jake@swensen.io>"]
edition = "2018"

[dependencies]
clap = "2.33"
futures = { version = "0.3.5", default-features = false }
influxdb2_client = { git = "https://github.com/influxdata/influxdb_iox", branch = "main" }
sensehat = { version = "1.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }